--- a/deb/openmediavault/var/www/openmediavault/css/omv-theme-crisp-all.css
+++ b/deb/openmediavault/var/www/openmediavault/css/omv-theme-crisp-all.css
@@ -18,34 +18,24 @@
  * You should have received a copy of the GNU General Public License
  * along with OpenMediaVault. If not, see <http://www.gnu.org/licenses/>.
  */
-// require("js/omv/data/Model.js")
-// require("js/omv/workspace/node/Node.js")
 
-/**
- * @ingroup webgui
- * @class OMV.workspace.node.Model
- * @derived OMV.data.Model
- */
-Ext.define("OMV.workspace.node.Model", {
-	extend: "OMV.data.Model",
-	requires: [
-		"OMV.workspace.node.Node"
-	],
+/******************************************************************************/
+/* ExtJS crisp theme                                                          */
+/******************************************************************************/
 
-	idProperty: "uri",
-	fields: [
-		{ name: "id", type: "string" },
-		{ name: "path", type: "string" },
-		{ name: "className", type: "string" },
-		{ name: "text", type: "string" },
-		{ name: "position", type: "int" },
-		{ name: "icon16", type: "string" },
-		{ name: "icon32", type: "string" },
-		{ name: "iconSvg", type: "string" },
-		{ name: "leaf", type: "boolean" },
-		{ name: "uri", type: "string", convert: function(v, rec) {
-			return OMV.workspace.node.Node.buildUri([ rec.get("path"),
-			  rec.get("id") ]);
-		} }
-	]
-});
+/* Tabs */
+.x-tab.x-tab-active.x-tab-default {
+	border-color: #98b7cf;
+	background-color: #98b7cf;
+}
+
+/* Buttons */
+.x-btn-default-small {
+	border-color: #98b7cf;
+	background-color: #98b7cf;
+}
+
+/* Window */
+.x-window-header-title-default {
+	color: #98b7cf;
+}
