* Translate message box buttons * Get rid of the panel border

--- a/deb/openmediavault/var/www/openmediavault/css/omv.css
+++ b/deb/openmediavault/var/www/openmediavault/css/omv.css
@@ -85,6 +85,10 @@ div#headerrlogo {
 .x-text-center {
 	text-align: center;
 }
+/* Customize form fields */
+.x-form-text-wrap-noborder {
+	border-width: 0px
+}
 /* Customize textarea fields */
 .x-form-textarea-monospaced textarea {
 	font-family: monospace;
