Add paging toolbar icons.

--- a/deb/openmediavault/var/www/openmediavault/css/omv.css
+++ b/deb/openmediavault/var/www/openmediavault/css/omv.css
@@ -347,5 +347,5 @@ div#headerrlogo {
 }
 .x-tbar-loading,
 .x-item-disabled .x-tbar-loading {
-	background-image: url("../images/refresh.png");
+	background-image: url("../images/page-refresh.png");
 }
