The public key of the user must now be specified in the RFC 4716 SSH public key file format.

--- a/deb/openmediavault/usr/share/openmediavault/templates/config.xml
+++ b/deb/openmediavault/usr/share/openmediavault/templates/config.xml
@@ -174,7 +174,7 @@
 					<name>xxx</name>
 					<email>xxx</email>
 					<disallowusermod>0</disallowusermod>
-					<sshpubkey></sshpubkey>
+					<sshpubkey>|xxx</sshpubkey>
 				</user>
 				-->
 			</users>
