Begin to implement Mantis 0001193: Option to turn off the collection of system performance statistics.

--- a/deb/openmediavault/usr/share/openmediavault/templates/config.xml
+++ b/deb/openmediavault/usr/share/openmediavault/templates/config.xml
@@ -22,6 +22,12 @@
 			<cpufreq>1</cpufreq>
 			<powerbtn>nothing</powerbtn>
 		</powermanagement>
+		<monitoring>
+			<!--
+			<perfstats>0|1</perfstats>
+			-->
+			<perfstats>1</perfstats>
+		</monitoring>
 		<time>
 			<timezone>Etc/UTC</timezone>
 			<ntp>
