Mantis 0001193: Option to turn off the collection of system performance statistics.

--- a/deb/openmediavault/usr/share/openmediavault/templates/config.xml
+++ b/deb/openmediavault/usr/share/openmediavault/templates/config.xml
@@ -23,10 +23,12 @@
 			<powerbtn>nothing</powerbtn>
 		</powermanagement>
 		<monitoring>
-			<!--
-			<perfstats>0|1</perfstats>
-			-->
-			<perfstats>1</perfstats>
+			<perfstats>
+				<!--
+				<enable>0|1</enable>
+				-->
+				<enable>1</enable>
+			</perfstats>
 		</monitoring>
 		<time>
 			<timezone>Etc/UTC</timezone>
