Change network interface format in database to be able to add new types like WLAN/bridge/... very easy.

--- a/deb/openmediavault/usr/share/openmediavault/templates/config.xml
+++ b/deb/openmediavault/usr/share/openmediavault/templates/config.xml
@@ -87,9 +87,10 @@
 			<domainname></domainname>
 			<interfaces>
 				<!--
-				<iface>
+				<interface>
 					<uuid>xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx</uuid>
-					<devicename>(eth|wlan)\d+</devicename>
+					<type>ethernet|bond|vlan|...</type>
+					<devicename>xxx</devicename>
 					<method>dhcp|static|manual</method>
 					<address>xxx.xxx.xxx.xxx</address>
 					<netmask>xxx.xxx.xxx.xxx</netmask>
@@ -104,51 +105,19 @@
 					<wol>0|1</wol>
 					<options></options>
 					<comment>xxx</comment>
-				</iface>
-				<bondiface>
-					<uuid>xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx</uuid>
-					<devicename>bond\d+</devicename>
-					<method>dhcp|static|manual</method>
-					<address>xxx.xxx.xxx.xxx</address>
-					<netmask>xxx.xxx.xxx.xxx</netmask>
-					<gateway>xxx.xxx.xxx.xxx</gateway>
-					<method6>auto|dhcp|static|manual</method6>
-					<address6>xxxx:xxxx:...:xxxx</address6>
-					<netmask6>0-128</netmask6>
-					<gateway6>xxxx:xxxx:...:xxxx</gateway6>
-					<dnsnameservers></dnsnameservers>
-					<dnssearch></dnssearch>
-					<mtu></mtu>
-					<wol>0|1</wol>
-					<options></options>
-					<comment>xxx</comment>
+					# Optional arguments by type:
+					# - ethernet
+					# - bond
 					<slaves>((eth|wlan)\d+,)*(eth|wlan)\d+</slaves>
 					<bondprimary>(eth|wlan)\d+</bondprimary>
 					<bondmode>0|1|2|3|4|5|6</bondmode>
 					<bondmiimon>0</bondmiimon>
 					<bonddowndelay>0</bonddowndelay>
 					<bondupdelay>0</bondupdelay>
-				</bondiface>
-				<vlaniface>
-					<uuid>xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx</uuid>
-					<devicename>(eth|wlan|bond)\d+.\d+</devicename>
-					<method>dhcp|static|manual</method>
-					<address>xxx.xxx.xxx.xxx</address>
-					<netmask>xxx.xxx.xxx.xxx</netmask>
-					<gateway>xxx.xxx.xxx.xxx</gateway>
-					<method6>auto|dhcp|static|manual</method6>
-					<address6>xxxx:xxxx:...:xxxx</address6>
-					<netmask6>0-128</netmask6>
-					<gateway6>xxxx:xxxx:...:xxxx</gateway6>
-					<dnsnameservers></dnsnameservers>
-					<dnssearch></dnssearch>
-					<mtu></mtu>
-					<wol>0|1</wol>
-					<options></options>
-					<comment>xxx</comment>
+					# - vlan
 					<vlanid>1-4095</vlanid>
 					<vlanrawdevice>(eth|wlan|bond)\d+</vlanrawdevice>
-				</vlaniface>
+				</interface>
 				-->
 			</interfaces>
 			<iptables>
