Add support to configure Wi-Fi connections. Only WPA & WPA2 is supported.

--- a/deb/openmediavault/usr/share/openmediavault/templates/config.xml
+++ b/deb/openmediavault/usr/share/openmediavault/templates/config.xml
@@ -119,7 +119,7 @@
 					<vlanrawdevice>(eth|wlan|bond)\d+</vlanrawdevice>
 					# - wireless
 					<wpassid>xxx</wpassid>
-					<wpapassphrase>xxx</wpapassphrase>
+					<wpapsk>xxx</wpapsk>
 				</interface>
 				-->
 			</interfaces>
