--- a/deb/openmediavault/var/www/openmediavault/css/omv.css
+++ b/deb/openmediavault/var/www/openmediavault/css/omv.css
@@ -82,6 +82,9 @@ div#headerrlogo {
 	background-image: url("/images/header_rlogo.png");
 	display: none;
 }
+.x-monospaced {
+	font-family: monospace;
+}
 .x-text-center {
 	text-align: center;
 }
