Do some more improvements.

--- a/deb/openmediavault/usr/share/openmediavault/templates/config.xml
+++ b/deb/openmediavault/usr/share/openmediavault/templates/config.xml
@@ -70,6 +70,7 @@
 				<monitfilesystems>1</monitfilesystems>
 				<mdadm>1</mdadm>
 				<smartmontools>1</smartmontools>
+				<cronapt>1</cronapt>
 			</notifications>
 		</notification>
 		<certificates>
