Add ability to set multiple SSH public keys per user. The user can not add them itself, this must be done by the administrator.

--- a/deb/openmediavault/usr/share/openmediavault/templates/config.xml
+++ b/deb/openmediavault/usr/share/openmediavault/templates/config.xml
@@ -155,7 +155,9 @@
 					<name>xxx</name>
 					<email>xxx</email>
 					<disallowusermod>0</disallowusermod>
-					<sshpubkey>|xxx</sshpubkey>
+					<sshpubkeys>
+						<sshpubkey>|xxx</sshpubkey>
+					</sshpubkeys>
 				</user>
 				-->
 			</users>
