Begin to add WebGUI and engine backend to suppotz SSH certificates. These generated certificates are passwordless. The certificates are not assigned to a user, they are only used for services like rsync. The certificate files are written to the filesystem (owner is root) and can be used by services like rsync for passwordless authentication.

--- a/deb/openmediavault/usr/share/openmediavault/templates/config.xml
+++ b/deb/openmediavault/usr/share/openmediavault/templates/config.xml
@@ -81,6 +81,12 @@
 				<privatekey>xxx</privatekey>
 				<comment>xxx</comment>
 			</sslcertificate>
+			<sshcertificate>
+				<uuid>xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx</uuid>
+				<publickey>xxx</publickey>
+				<privatekey>xxx</privatekey>
+				<comment>xxx</comment>
+			</sshcertificate>
 			-->
 		</certificates>
 		<network>
