--- a/deb/openmediavault/var/www/openmediavault/css/omv.css
+++ b/deb/openmediavault/var/www/openmediavault/css/omv.css
@@ -257,11 +257,12 @@ div#headerrlogo {
 }
 /* Tip toolbar */
 .x-toolbar-tip {
-	background: #ffeb99
+	background: #ffeb99;
 }
 /* Configuration activation toolbar */
 .x-toolbar-applycfg {
-	background: #ffeb99
+	background: #ffeb99;
+	background-image: none;
 }
 /* Workspace node view */
 .x-workspace-node-view {
