Various UI improvements.

--- a/deb/openmediavault/var/www/openmediavault/css/omv.css
+++ b/deb/openmediavault/var/www/openmediavault/css/omv.css
@@ -53,6 +53,7 @@ div#shutdownlogo {
 	top: 0px;
 	right: 0px;
 	background: url("/images/shutdown_64.png");
+	background: url("/images/shutdown_64.svg"), none;
 	background-attachment: fixed;
 	background-repeat: no-repeat;
 	background-color: transparent;
